--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@
   --border: 82, 82, 82;
 
   --cta-text: 238, 238, 238;
+  --cta-underline: 82, 82, 82;
   --cta-btn-text: 32, 32, 35;
   --cta-link: 254, 98, 194;
   --cta-btn: 129, 230, 217;
@@ -38,6 +39,7 @@
   --border: 82, 82, 82;
 
   --cta-text: 32, 32, 35;
+  --cta-underline: 82, 82, 82;
   --cta-btn-text: 238, 238, 238;
   --cta-link: 85, 137, 234;
   --cta-btn: 49, 151, 149;
